# terminal_card

./: README.md  pyproject.toml
terminal_card/: __main__.py
